# paperconan

./: .gitignore  README.md  build_skill_zip.sh  pyproject.toml
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-06-15-columnar-engine.md
docs/superpowers/specs/: 2026-05-28-paperconan-data-fetch-design.md  2026-06-03-grim-grimmer-detector-design.md  2026-06-13-skillhub-upload-design.md  2026-06-15-columnar-engine-design.md  2026-07-02-multi-finding-adjudicated-report-design.md
examples/: README.md
examples/demo_paper/audit/: report.html  scan.json
recheck/codex_task/batch2/: DECIMAL_TAIL_GATE_VALIDATION.md
scripts/: bench_columnar.py
skills/paperconan/: SKILL.md
skills/paperconan/references/: adjudication-tiers.md  detectors.md  interpretation.md  judgment-rubric.md  output-schema.md  report-templates.md
src/paperconan/: __init__.py  _adjudicated_html.py  _audit.py  _html.py  _prefilter.py  _profiles.py  _sheet.py  collisions.py  detectors.py  io.py  packet.py  schema.py
src/paperconan/fetch/: __init__.py  _cli.py  _download.py  _http.py  _nature.py  _resolve.py  _sources.py
tests/: build_fixture.py  test_adjudicated_report.py  test_batch2_prefilter.py  test_benign.py  test_cell_guard.py  test_collisions.py  test_columnar_accessors.py  test_columnar_loader.py  test_decimal_tail_gate.py  test_evidence_cap.py  test_fdr.py  test_fetch_download.py  test_fetch_nature.py  test_fetch_pmc_oa.py  test_fetch_wiring.py  test_finding_sample.py  test_golden_columnar.py  test_grim.py  test_grim_e2e.py  test_http_get_text.py  test_module_boundaries.py  test_oversized_guard.py  test_packaging.py  test_packet.py  test_profiles.py  test_public_api.py  test_relations_tolerance.py  test_sheet.py  test_within_col_prefilter.py
tests/fetch/: test_cli.py  test_download.py  test_http.py  test_live_network.py  test_resolve.py  test_search_all.py  test_sources_dryad.py  test_sources_europepmc.py  test_sources_zenodo.py
tests/fetch/fixtures/: europepmc_search.json
tests/golden/: tiny_paper.json
